[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/main/Game.gd" type="Script" id=1]
[ext_resource path="res://src/party/Party.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/map/LocalMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/interface/gui/GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/shaders/TransitionColor.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/interface/game_over/GameOverInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/bgm/battle_theme.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/main/MusicPlayer.gd" type="Script" id=8]
[ext_resource path="res://src/interface/debug/DebugInterface.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Debugger.gd" type="Script" id=10]
[ext_resource path="res://src/interface/menus/MonsterCollection.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/backgrounds/Title_Screen.png" type="Texture" id=12]
[ext_resource path="res://src/combat/Enemies.tscn" type="PackedScene" id=13]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Party" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LocalMap" parent="." instance=ExtResource( 3 )]

[node name="Enemies" parent="." instance=ExtResource( 13 )]

[node name="GUI" parent="." instance=ExtResource( 4 )]

[node name="Overlays" type="CanvasLayer" parent="."]

[node name="TransitionColor" parent="Overlays" instance=ExtResource( 5 )]
pause_mode = 2
mouse_filter = 2

[node name="GameOverInterface" parent="." instance=ExtResource( 6 )]
layer = 0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 8 )

[node name="DebugMode" type="CanvasLayer" parent="."]

[node name="Debugger" type="ColorRect" parent="DebugMode"]
visible = false
margin_right = 1440.0
margin_bottom = 810.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="DebugMode/Debugger"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Speed" type="VBoxContainer" parent="DebugMode/Debugger/Buttons"]
margin_right = 40.0
margin_bottom = 40.0

[node name="LogList" type="VBoxContainer" parent="DebugMode/Debugger"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Filter" type="HBoxContainer" parent="DebugMode/Debugger/LogList"]
margin_right = 40.0
margin_bottom = 40.0

[node name="FilterButton" type="Button" parent="DebugMode/Debugger/LogList/Filter"]
margin_right = 12.0
margin_bottom = 20.0

[node name="LogTemplate" type="HBoxContainer" parent="DebugMode/Debugger/LogList"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Date" type="Label" parent="DebugMode/Debugger/LogList/LogTemplate"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Level" type="Label" parent="DebugMode/Debugger/LogList/LogTemplate"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Category" type="Label" parent="DebugMode/Debugger/LogList/LogTemplate"]
margin_right = 40.0
margin_bottom = 14.0

[node name="LogText" type="Label" parent="DebugMode/Debugger/LogList/LogTemplate"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Debug" type="CanvasLayer" parent="."]
layer = 100

[node name="DebugInterface" parent="Debug" instance=ExtResource( 9 )]
visible = false

[node name="MonsterCollection" parent="." instance=ExtResource( 11 )]

[node name="IntroScreen" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="IntroScreen"]
margin_left = 5.0
margin_right = 1925.0
margin_bottom = 1080.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="monster_collection_menu_summoned" from="MonsterCollection" to="." method="_on_MonsterCollection_monster_collection_menu_summoned"]
[connection signal="toggle_encounters" from="MonsterCollection" to="." method="_on_toggle_encounters"]
